fix(rekyc-form): update gap between bo details table

--- a/src/assets/forms/rekyc/rekyc.css
+++ b/src/assets/forms/rekyc/rekyc.css
@@ -493,6 +493,10 @@ body {
     }
 
     .bo_container {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
       .bo_wrapper {
         width: 100%;
         display: flex;
